Bug 814708 - Use nsAutoPtr for mTimeStretcher r=padenot